# de-three-tier-data-stack

./: .dockerignore  .env.example  .gitignore  README.md  compose.yml  dagster_cloud.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: confluence_sync.yml
config/: config.yaml  dagster_agent.yaml
dagster_orch/: assets.py  definitions.py  project.py
data/: .gitkeep
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/: dim_constituency.sql  dim_station.sql  fact_reading.sql  schema.yml
dbt_project/models/queries/: query_a.sql  query_b.sql  query_c.sql
dbt_project/models/staging/: stg_constituencies.sql  stg_readings.sql  stg_stations.sql
dbt_project/static_sql/: pollution.sql  query-a.sql  query-b.sql  query-c.sql
docker/: Dockerfile.generator  Dockerfile.pipeline
docs/architecture/: architecture_design_spec.md  system_topology.md
docs/deployment/: cloud_infrastructure.md  dagster_cloud.md
docs/onboarding/: developer_setup.md
docs/reports/: data_operations_governance.md  executive_report.md  report.md
nosql/: import_nosql.py  nosql.md  query_nosql.js
scripts/: confluence_sync_postprocessor.py  confluence_sync_preprocessor.py  prep_dagster_cloud.py
src/: downloader.py  extract.py  generator.py  load.py  pipeline.py  transform.py  validate.py
tests/: test_pipeline.py
